--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,45 +1,135 @@
-html {
-
-  margin: 0;
-  padding: 0;
+h1{
+  font-size: 40px;
 }
 
-body {
-  font-family: sans-serif;  
-  margin: 0;
-  padding: 0;
-}
+  
+  html {
+    margin: 0;
+    padding: 0;
+  }
+
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
 
 #header {
-  margin: 0;
   text-align: center;
   height: 100px;
+  /*background-color: #d3ebff;
+  border-bottom: 2px solid #b9defd;*/
+  
+  background: rgb(35,185,255); /* Old browsers */
+  background: -moz-linear-gradient(top, rgba(35,185,255,1) 0%, rgba(73,155,234,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(35,185,255,1)), color-stop(100%,rgba(73,155,234,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(35,185,255,1) 0%,rgba(73,155,234,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(35,185,255,1) 0%,rgba(73,155,234,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(35,185,255,1) 0%,rgba(73,155,234,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom, rgba(35,185,255,1) 0%,rgba(73,155,234,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23b9ff', endColorstr='#499bea',GradientType=0 ); /* IE6-9 */
 }
 
 #header h1{
-  margin-top: 65px;
-  background-color: rgba(255,255,255,.8);
-  border-top: 2px solid gray;
-  font-size: 35px;
-  border-bottom: 2px solid gray;
-  
-  color: #222;
-  text-shadow: 0px 2px 3px #555;
+  max-width: 600px;
+  min-width: 320px;
+  margin: 0 auto;
+  line-height: 60px;
 }
 
-#header img {
-  position: absolute;
-  top: -20px;
-  z-index: -1;
+#header h2{
+  max-width: 600px;
+  min-width: 320px;
+  margin: 0 auto;
 }
 
-#content {
-  border-radius: 5px;
-  background-color: white;
-  height: 200px;
+p#description{
+  height: 210px;
 }
 
-#content h2 {
+#galleria {
+  width: 50%;
+  height: 210px;
+  border: 1px dashed gray;
+  line-height: 210px;
   text-align: center;
-  font-size: 20px;
+  float: right;
+}
+
+.container {
+  max-width: 600px;
+  min-width: 320px;
+  padding: 20px;
+  background-color: white;
+}
+
+h3{
+  border-bottom: 3px solid #009e0b;
+  line-height: 30px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.first{
+  float: left;
+  width: 45%;
+}
+
+.second{
+  width: 45%;
+  float: right;
+}
+
+#contact{
+  clear: both;
+}
+
+#contact span.btn{
+  height: 40px;
+}
+
+.container {
+  position: relative;
+}
+
+#phone {
+  clear: both;
+  line-height: 50px;
+  font-size: 2em;
+  margin: 20px auto;
+  display: block;
+  width: 200px;
+}
+
+#truck {
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
+ul{
+  display: block;
+  width: 250px;
+  font-size: 1.2em;
+  margin: 0 auto;
+}
+
+ul li{
+  margin-top: 5px;
+}
+
+@media only screen and (max-device-width: 480px) {
+  #truck {
+    width: 320px;
+  }
+  
+  h2 {
+    font-size: 15px;
+  }
+
+  .container{
+    padding: 0;
+    margin: 0;
+  }
 }
