--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -118,6 +118,11 @@ ul li{
   margin-top: 5px;
 }
 
+#cards {
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
 @media only screen and (max-device-width: 480px) {
 
   
