--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10,6 +10,10 @@ html {
 body {
   margin: 0;
   padding: 0;
+  background-color: #f4f4f4;
+  background-image: url('../images/white_carbon.png');
+  background-repeat: repeat;
+  margin-bottom: 15px;
 }
 
 
@@ -27,6 +31,11 @@ body {
   background: -ms-linear-gradient(top, rgba(35,185,255,1) 0%,rgba(73,155,234,1) 100%); /* IE10+ */
   background: linear-gradient(to bottom, rgba(35,185,255,1) 0%,rgba(73,155,234,1) 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23b9ff', endColorstr='#499bea',GradientType=0 ); /* IE6-9 */
+  
+  -webkit-box-shadow:  0px 2px 2px #aaa;
+          box-shadow:  0px 2px 2px #aaa;
+  
+  z-index: 10;
 }
 
 #header h1{
@@ -58,8 +67,15 @@ p#description{
 .container {
   max-width: 600px;
   min-width: 320px;
-  padding: 20px;
+  margin: 0 auto;
+  padding: 15px;
   background-color: white;
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  box-shadow: 4px 4px 4px #ccc;
+  
+  z-index: -10;
 }
 
 h3{
@@ -95,7 +111,8 @@ h3{
   clear: both;
   line-height: 50px;
   font-size: 2em;
-  margin: 20px auto;
+  margin: 15px auto;
+  margin-bottom: 10px;
   display: block;
   width: 200px;
 }
@@ -132,6 +149,11 @@ ul li{
 
   .container{
     padding: 0;
+    padding-bottom: 15px;
+    margin: 0;
+  }
+  
+  body {
     margin: 0;
   }
 }
